kelas istio/02. Traffic management/c. retries/review/review-2.0.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
  namespace: default
spec:
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
          app: review
    spec:
      containers:
      - name: review
        image: rahadiangg/demo-istio:review-svc-2.0.0 # versi error
        resources:
          limits:
            memory: "20Mi"
            cpu: "20m"
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: review
  namespace: default
spec:
  selector:
    app: review
  ports:
  - port: 8000
    targetPort: 8000
    name: http
