kelas istio/02. Traffic management/c. retries/review/review-vs-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
spec:
  hosts:
  - review.default.svc.cluster.local
  http:
    - route:
      - destination:
          host: review.default.svc.cluster.local
      retries:
        attempts: 1
        # perTryTimeout: 2s
        # retryOn: 5xx
